src/app/pages/player/assessment/components/simple-choice/simple-choice.component.scss
.question-card{
  justify-content: space-evenly;
  flex-direction: column;
  display: flex;
  min-height: calc(100% - 48px);
  max-width: 480px;
  width: 100%;

  .card-content-ios{
    padding-top: 0;
  }

  .statement{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    flex-grow: 1;
  }
  ion-card-title{
    font-size: 1rem;
  }

  ion-card-header{
    display: flex;
    flex-direction: column;
    flex-grow: 1;
  }
}

